travelcalifornia/explorecalifornia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorecalifornia.com
  name: explorecalifornia.com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorecalifornia.com
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: explorecalifornia.com
    spec:
      containers:
      - image: localhost:5000/explorecalifornia.com:latest
        name: explorecalifornia-com-b4rj5
        ports:
          - containerPort: 80
        resources: {}
status: {}
