travelcalifornia/explorecalifornia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorecalifornia-com
  namespace: development
spec:
  type: LoadBalancer
  selector:
    app: explorecalifornia.com
  ports:
    - port: 8080
      targetPort: 80
